--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.252.0",
+    "@aws-sdk/s3-request-presigner": "^3.252.0",
+    "aws-sdk": "^2.1297.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
@@ -20,6 +23,7 @@
     "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
+    "socket.io": "^4.6.0",
     "uuid": "^9.0.0"
   }
 }
